--- a/templates/default/invoice/invoicenew.html
+++ b/templates/default/invoice/invoicenew.html
@@ -141,21 +141,21 @@
 								{if empty($suggested_flags.splitpayment)} style="display: none;"{/if}
 						>
 							<input type="checkbox" name="invoice[splitpayment]" value="1"
-									{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}
+								{if !empty($suggested_flags.splitpayment) && $invoice.splitpayment} checked{/if}
 							>
 							{trans("split payment")}
 						</label>
 						<label {tip text="translates into JPK FP flag"}>
 							<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_RECEIPT}]" value="1"
-									{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}
+								{if $invoice.flags[$smarty.const.DOC_FLAG_RECEIPT]} checked{/if}
 							>
 							{trans("<!invoice>receipt")}
 						</label>
 						<label id="telecomservice" {tip text="translates into JPK EE flag"}
-								{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}
+							{if empty($suggested_flags.telecomservice)} style="display: none;"{/if}
 						>
 							<input type="checkbox" name="invoice[flags][{$smarty.const.DOC_FLAG_TELECOM_SERVICE}]" value="1"
-									{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}
+								{if $invoice.flags[$smarty.const.DOC_FLAG_TELECOM_SERVICE]} checked{/if}
 							>
 							{trans("<!invoice>telecommunication service")}
 						</label>
@@ -168,13 +168,13 @@
 					<td class="nobr">
 						<label>
 							<input type="radio" id="ingross" name="invoice[netflag]" value="0"
-									{if !$invoice.netflag} checked{/if}{if $contents} disabled{/if}
+								{if !$invoice.netflag} checked{/if}{if $contents} disabled{/if}
 							>
 							{trans("gross")}
 						</label>
 						<label>
 							<input type="radio" id="innet" name="invoice[netflag]" value="1"
-									{if $invoice.netflag} checked{/if}{if $contents} disabled{/if}
+								{if $invoice.netflag} checked{/if}{if $contents} disabled{/if}
 							>
 							{trans("net")}
 						</label>
@@ -189,7 +189,7 @@
 					</td>
 					<td class="nobr">
 						<input type="checkbox" id="preserve-proforma" name="invoice[preserve-proforma]" value="1"
-								{if isset($invoice['preserve-proforma']) && !empty($invoice['preserve-proforma'])} checked{/if}
+							{if isset($invoice['preserve-proforma']) && !empty($invoice['preserve-proforma'])} checked{/if}
 						>
 					</td>
 				</tr>
@@ -308,7 +308,7 @@
 					<td class="text-right nobr">{$covenantlist[covenantlist].tax}</td>
 					<td class="text-right nobr">{moneyf($covenantlist[covenantlist].value, $covenantlist[covenantlist].currency)}</td>
 					<td class="text-right">
-						<input TYPE="checkbox" NAME="marks[]" VALUE="{$covenantlist[covenantlist].cashid}">
+						<input type="checkbox" name="marks[]" value="{$covenantlist[covenantlist].cashid}">
 					</td>
 				</tr>
 			{/section}
