improvement: prepare new icon in menu for Jambox plugin

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -2044,3 +2044,13 @@
     content: @fa-var-lightbulb;
   }
 }
+
+.lms-ui-icon-tv {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-tv;
+  }
+}
+
