--- a/templates/default/traffic/trafficdbcompact.html
+++ b/templates/default/traffic/trafficdbcompact.html
@@ -30,7 +30,7 @@
 		<TD WIDTH="1%">
 		</TD>
 		<TD WIDTH="99%" {tip text="Check that option to remove records older than one year"}>
-		    <INPUT TYPE="checkbox" NAME="removeold" ID="removeold" VALUE="1"><B><label for="removeold">{trans("Delete data older than one year")}</label></B>>
+		    <INPUT TYPE="checkbox" NAME="removeold" ID="removeold" VALUE="1"><B><label for="removeold">{trans("Delete data older than one year")}</label></B>
 		</TD>
 	</TR>
 	<TR>
