enhancement: allow to view uploaded files in modal or inline (js:lmsFileView)

--- a/templates/default/jquery.html
+++ b/templates/default/jquery.html
@@ -90,6 +90,7 @@
 <script src="js/lms-ui-datepicker.js"></script>
 <script src="js/lms-ui-combobox.js"></script>
 <script src="js/lms-ui-fileupload.js"></script>
+<script src="js/lms-ui-fileview.js"></script>
 <script src="js/lms-ui-karma.js"></script>
 <script>
 
