--- a/templates/default/customer/customerdevices.html
+++ b/templates/default/customer/customerdevices.html
@@ -6,7 +6,12 @@
 
 	{tab_header content_id="devicespanel"}
 		{tab_header_cell icon="lms-ui-icon-netdev"}
-			<strong>{t a=$customerdevices|@count|default:"0"}Network Devices ($a):{/t}</strong>
+			{if is_array($customerdevices)}
+				{$count = count($customerdevices)}
+			{else}
+				{$count = 0}
+			{/if}
+			<strong>{t a=$count}Network Devices ($a):{/t}</strong>
 		{/tab_header_cell}
 		{tab_header_cell}
 			<A href="?m=netdevadd&customerid={$customerinfo.id}">{trans("New device")} &raquo;</A>
