--- a/templates/default/customer/customernetnodes.html
+++ b/templates/default/customer/customernetnodes.html
@@ -6,7 +6,12 @@
 
 	{tab_header content_id="netnodepanel"}
 		{tab_header_cell icon="lms-ui-icon-netnode"}
-			<strong>{t a=$customernetnodes|@count|default:"0"}Network Nodes ($a):{/t}</strong>
+			{if is_array($customernetnodes)}
+				{$count = count($customernetnodes)}
+			{else}
+				{$count = 0}
+			{/if}
+			<strong>{t a=$count}Network Nodes ($a):{/t}</strong>
 		{/tab_header_cell}
 		{tab_header_cell}
 			<A href="?m=netnodeadd&customerid={$customerinfo.id}">{trans("New network node")} &raquo;</A>
