--- a/templates/default/customer/customernetworksbox.html
+++ b/templates/default/customer/customernetworksbox.html
@@ -5,12 +5,7 @@
 
 	{tab_header content_id="networkspanel-`$layout.module`"}
 		{tab_header_cell icon="lms-ui-icon-network"}
-			{if is_array($customernetworks)}
-				{$count = count($customernetworks)}
-			{else}
-				{$count = 0}
-			{/if}
-			<strong>{t a=$count}Customer Networks ($a):{/t}</strong>
+			<strong>{t a=$customernetworks|size}Customer Networks ($a):{/t}</strong>
 		{/tab_header_cell}
 		{tab_header_cell}
 			{if $customerinfo.status != $smarty.const.CSTATUS_INTERESTED && !$customerinfo.deleted}
