--- a/templates/default/customer/customervoipaccountsbox.html
+++ b/templates/default/customer/customervoipaccountsbox.html
@@ -5,12 +5,7 @@
 {tab_container id="customervoipaccountsbox" label="Voip Accounts"}
 	{tab_header content_id="voipaccountspanel"}
 		{tab_header_cell icon="lms-ui-icon-phone"}
-			{if is_array($customervoipaccounts)}
-				{$count = count($customervoipaccounts)}
-			{else}
-				{$count = 0}
-			{/if}
-			<strong>{t a=$count}Voip Accounts ($a):{/t}</strong>
+			<strong>{t a=$customervoipaccounts|size}Voip Accounts ($a):{/t}</strong>
 		{/tab_header_cell}
 		{tab_header_cell}
 			{if $customerinfo.status != $smarty.const.CSTATUS_INTERESTED && !$customerinfo.deleted}
