--- a/templates/default/node/routednetworks.html
+++ b/templates/default/node/routednetworks.html
@@ -9,12 +9,7 @@
 
 	{tab_header content_id="routednetworkspanel-`$layout.module`"}
 		{tab_header_cell icon="lms-ui-icon-routing"}
-			{if is_array($routednetworks)}
-				{$count = count($routednetworks)}
-			{else}
-				{$count = 0}
-			{/if}
-			<strong>{t a=$count}Routed Networks ($a):{/t}</strong>
+			<strong>{t a=$routednetworks|size}Routed Networks ($a):{/t}</strong>
 		{/tab_header_cell}
 	{/tab_header}
 
