enhancement: customer ten filter in invoice report box (fixed html syntax error)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -779,7 +779,7 @@
 						</td>
 						<td class="nobr">
 							<label>
-								<input type="checkbox" name="extended" value="1" form="invoicereort">
+								<input type="checkbox" name="extended" value="1" form="invoicereport">
 								{trans("extended format")}
 							</label>
 						</td>
