enhancement: customer ten filter in invoice report box (added small hint button)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -611,6 +611,7 @@
 									</td>
 									<td>
 										<strong>{trans("TEN")}</strong>
+										{hint content="uses TEN from invoice"}
 									</td>
 									<td>
 										<select name="customer_ten" form="invoicereport">
