enhancement: allow to view uploaded files different than image in modal dialog

--- a/css/style.less
+++ b/css/style.less
@@ -2655,3 +2655,10 @@ fieldset {
 		display: inline-block;
 	}
 }
+
+.lms-ui-fileview-dialog .ui-dialog-content {
+	display: flex;
+	object {
+		width: 100%;
+	}
+}
