enhancement: allow to view uploaded files different than image in modal dialog (visual fixes)

--- a/css/style.less
+++ b/css/style.less
@@ -2658,7 +2658,9 @@ fieldset {
 
 .lms-ui-fileview-dialog .ui-dialog-content {
 	display: flex;
-	object {
+	object,
+	img {
 		width: 100%;
+		height: 100%;
 	}
 }
